# tkm_interpreter

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  justfile
docs/: TKOM-dokumentacja-końcowa.md  TKOM-projekt-wstepny.md  ZPR - Dokumentacja końcowa.md
example_programs/: bind_n_comp.tkm  counter.tkm  nth.tkm  occupy_fridge.tkm  untill_yes.tkm
include/: ast_node.hpp  bind_front_function.hpp  builtint_functions.hpp  call_frame.hpp  callable.hpp  cli_app.hpp  composed_function.hpp  constants.hpp  enum.h  environment.hpp  exceptions.hpp  execution_guard.hpp  expression.hpp  global_function.hpp  ilexer.hpp  interpreter.hpp  iparser.hpp  lexer.hpp  logging_lexer.hpp  node.hpp  oper_handler.hpp  parser.hpp  parser_test_visitor.hpp  position.hpp  printer.hpp  program.hpp  safe_exec.hpp  scope.hpp  source_handler.hpp  statement.hpp  token.hpp  token_type.hpp  type.hpp  type_checker.hpp  type_handler.hpp  typed_identifier.hpp  variable.hpp  verbose_parser.hpp  visitor.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  cli_app.cpp  execution_guard.cpp  program_.cpp  safe_exec.cpp
src/exceptions/: CMakeLists.txt  exceptions.cpp
src/interpreter/: CMakeLists.txt  bind_front_function.cpp  builtin_functions.cpp  call_frame.cpp  callable.cpp  composed_function.cpp  environment.cpp  global_function.cpp  interpreter.cpp  oper_handler.cpp  scope.cpp  type_handler.cpp  variable.cpp
src/lexer/: CMakeLists.txt  lexer.cpp  logging_lexer.cpp  token.cpp  token_type.cpp
src/parser/: CMakeLists.txt  expression.cpp  node.cpp  parser.cpp  printer.cpp  program.cpp  statement.cpp  type.cpp  typed_identifier.cpp  verbose_parser.cpp
src/position/: CMakeLists.txt  position.cpp
src/source_handler/: CMakeLists.txt  source_handler.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/interpreter/: CMakeLists.txt  test_call_frame.cpp  test_interpreter.cpp  test_oper_handler.cpp  test_scope.cpp  test_type_handler.cpp
tests/lexer/: CMakeLists.txt  test_lexer.cpp  test_token.cpp
tests/parser/: CMakeLists.txt  parser_test_visitor.cpp  test_parser.cpp  test_type.cpp
tests/position/: CMakeLists.txt  test_position.cpp
tests/source_handler/: CMakeLists.txt  test_source_handler.cpp
